Moved extra tests' suite from tests/gama-local/extra-tests to tests/extra-tests
Uncommented macro AC_CONFIG_MACRO_DIR([m4]) in configure.ac
  -dnl AC_CONFIG_MACRO_DIR([m4]) ... commented out in version 2.10
  +AC_CONFIG_MACRO_DIR([m4])

Changed files:
  modified:   configure.ac
  modified:   lib/gnu_gama/xml/localnetworkoctave.cpp
  modified:   tests/Makefile.am
  new file:   tests/extra-tests/Makefile.am
  new file:   tests/extra-tests/input/Makefile.am
  renamed:    tests/gama-local/input/extra/railway-survey-with-aproximate-xy.gkf -> tests/extra-tests/input/railway-survey-with-aproximate-xy.gkf
  renamed:    tests/gama-local/input/extra/railway-survey.gkf -> tests/extra-tests/input/railway-survey.gkf
  renamed:    tests/gama-local/input/extra/railway-survey.xml -> tests/extra-tests/input/railway-survey.xml
  new file:   tests/extra-tests/scripts/Makefile.am
  renamed:    tests/gama-local/scripts/gama-local-extra-tests.in -> tests/extra-tests/scripts/gama-local-extra-tests.in
  modified:   tests/gama-local/Makefile.am
  modified:   tests/gama-local/scripts/Makefile.am

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,11 @@
+EXTRA_DIST = CMakeLists.txt
+
 if GNU_GAMA_G3_ENABLED
    GAMA_G3 = gama-g3
 endif
 
-EXTRA_DIST = CMakeLists.txt
+if GNU_GAMA_LOCAL_EXTRA_TESTS
+   EXTRA_TESTS = extra-tests
+endif
 
-SUBDIRS = matvec statan acord2 gama-local $(GAMA_G3)
+SUBDIRS = matvec statan acord2 gama-local $(GAMA_G3) $(EXTRA_TESTS)
