--- a/tests/extra-tests/scripts/gama-local-extra-tests.in
+++ b/tests/extra-tests/scripts/gama-local-extra-tests.in
@@ -12,8 +12,9 @@ fi;
 
 for f in railway-survey
 do
-    @top_builddir@/bin/gama-local @GAMA_INPUT@/extra/$f.gkf \
+    @top_builddir@/bin/gama-local @GAMA_INPUT@/$f.gkf \
         --algorithm envelope  --text $RES/$f.txt  --xml $RES/$f.xml
 
-    scripts/check_xml_xml $f @GAMA_INPUT@/extra/$f.xml $RES/$f.xml
+    @top_srcdir@/tests/gama-local/scripts/check_xml_xml \
+        $f @GAMA_INPUT@/$f.xml $RES/$f.xml
 done
