--- a/tests/gama-local/Makefile.am
+++ b/tests/gama-local/Makefile.am
@@ -26,7 +26,7 @@ endif
 
 TESTS = $(TESTA) $(TESTB) $(TESTC) $(TESTD)
 
-SUBDIRS = scripts input
+SUBDIRS = src input
 
 INPUT_FILES = gama-local \
               zoltan-test_2d_dms \
@@ -56,7 +56,7 @@ BUG_FILES = tst-tetrahedron-1 \
             bug-2019-08-13-traverse-knin_male \
             bug-2019-08-20-knin_test
 
-GAMA_SCRIPT  = $(srcdir)/scripts
+GAMA_SRC     = $(srcdir)/src
 GAMA_INPUT   = $(srcdir)/input
 GAMA_RESULTS = results/$(PACKAGE_VERSION)
 GAMA_OTHERS  = Makefile $(GAMA_RESULTS)
@@ -78,96 +78,96 @@ clean-local-check:
 $(GAMA_RESULTS):
 	mkdir -p $(GAMA_RESULTS)
 
-gama-local-version.sh: $(GAMA_SCRIPT)/gama-local-version.sh_ $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-version.sh_ \
+gama-local-version.sh: $(GAMA_SRC)/gama-local-version.sh_ $(GAMA_OTHERS)
+	@$(do_subst) < $(GAMA_SRC)/gama-local-version.sh_ \
 	             > gama-local-version.sh
 	@chmod +x gama-local-version.sh
 
-gama-local-adjustment.sh: $(GAMA_SCRIPT)/gama-local-adjustment.sh_ \
+gama-local-adjustment.sh: $(GAMA_SRC)/gama-local-adjustment.sh_ \
 	                  $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-adjustment.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-adjustment.sh_ \
 	             > gama-local-adjustment.sh
 	@chmod +x gama-local-adjustment.sh
 
-gama-local-algorithms.sh: $(GAMA_SCRIPT)/gama-local-algorithms.sh_ \
+gama-local-algorithms.sh: $(GAMA_SRC)/gama-local-algorithms.sh_ \
 	                  $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-algorithms.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-algorithms.sh_ \
 	             > gama-local-algorithms.sh
 	@chmod +x gama-local-algorithms.sh
 
-gama-local-equivalents.sh: $(GAMA_SCRIPT)/gama-local-equivalents.sh_ \
+gama-local-equivalents.sh: $(GAMA_SRC)/gama-local-equivalents.sh_ \
 	                   $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-equivalents.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-equivalents.sh_ \
 	             > gama-local-equivalents.sh
 	@chmod +x gama-local-equivalents.sh
 
-gama-local-xml-results.sh: $(GAMA_SCRIPT)/gama-local-xml-results.sh_ \
+gama-local-xml-results.sh: $(GAMA_SRC)/gama-local-xml-results.sh_ \
 	                   $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-xml-results.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-xml-results.sh_ \
 	             > gama-local-xml-results.sh
 	@chmod +x gama-local-xml-results.sh
 
-gama-local-html.sh: $(GAMA_SCRIPT)/gama-local-html.sh_ $(GAMA_OTHERS) \
+gama-local-html.sh: $(GAMA_SRC)/gama-local-html.sh_ $(GAMA_OTHERS) \
                     gama-local-adjustment.sh
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-html.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-html.sh_ \
 	             > gama-local-html.sh
 	@chmod +x gama-local-html.sh
 
-gama-local-xml-xml.sh: $(GAMA_SCRIPT)/gama-local-xml-xml.sh_ $(GAMA_OTHERS) \
+gama-local-xml-xml.sh: $(GAMA_SRC)/gama-local-xml-xml.sh_ $(GAMA_OTHERS) \
                        gama-local-adjustment.sh
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-xml-xml.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-xml-xml.sh_ \
 	             > gama-local-xml-xml.sh
 	@chmod +x gama-local-xml-xml.sh
 
-gama-local-parameters.sh: $(GAMA_SCRIPT)/gama-local-parameters.sh_ \
+gama-local-parameters.sh: $(GAMA_SRC)/gama-local-parameters.sh_ \
 	                  $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-parameters.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-parameters.sh_ \
 	             > gama-local-parameters.sh
 	@chmod +x gama-local-parameters.sh
 
-gama-local-updated-xml.sh: $(GAMA_SCRIPT)/gama-local-updated-xml.sh_ \
+gama-local-updated-xml.sh: $(GAMA_SRC)/gama-local-updated-xml.sh_ \
 	                   $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-updated-xml.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-updated-xml.sh_ \
 	             > gama-local-updated-xml.sh
 	@chmod +x gama-local-updated-xml.sh
 
-gama-local-externs.sh: $(GAMA_SCRIPT)/gama-local-externs.sh_ \
+gama-local-externs.sh: $(GAMA_SRC)/gama-local-externs.sh_ \
 	               $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-externs.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-externs.sh_ \
 	             > gama-local-externs.sh
 	@chmod +x gama-local-externs.sh
 
 
 
 if GNU_GAMA_LOCAL_TEST_SQLITE_READER
-gama-local-sqlite-reader.sh: $(GAMA_SCRIPT)/gama-local-sqlite-reader.sh_ \
+gama-local-sqlite-reader.sh: $(GAMA_SRC)/gama-local-sqlite-reader.sh_ \
 	                     $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-sqlite-reader.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/gama-local-sqlite-reader.sh_ \
 	             > gama-local-sqlite-reader.sh
 	@chmod +x gama-local-sqlite-reader.sh
 endif
 
 
 if GNU_GAMA_LOCAL_TEST_XMLLINT
-xmllint-gama-local-xsd.sh: $(GAMA_SCRIPT)/xmllint-gama-local-xsd.sh_ \
+xmllint-gama-local-xsd.sh: $(GAMA_SRC)/xmllint-gama-local-xsd.sh_ \
 	                   $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/xmllint-gama-local-xsd.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/xmllint-gama-local-xsd.sh_ \
 	             > xmllint-gama-local-xsd.sh
 	@chmod +x xmllint-gama-local-xsd.sh
 
 xmllint-gama-local-adjustment-xsd.sh: \
-	      $(GAMA_SCRIPT)/xmllint-gama-local-adjustment-xsd.sh_ \
+	      $(GAMA_SRC)/xmllint-gama-local-adjustment-xsd.sh_ \
 	      $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/xmllint-gama-local-adjustment-xsd.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/xmllint-gama-local-adjustment-xsd.sh_ \
 	             > xmllint-gama-local-adjustment-xsd.sh
 	@chmod +x xmllint-gama-local-adjustment-xsd.sh
 endif
 
 
 if GNU_GAMA_LOCAL_TEST_OCTAVE
-octave-gama-local.sh : $(GAMA_SCRIPT)/octave-gama-local.sh_ \
+octave-gama-local.sh : $(GAMA_SRC)/octave-gama-local.sh_ \
 	               $(GAMA_OTHERS) gama-local-adjustment.sh
-	@$(do_subst) < $(GAMA_SCRIPT)/octave-gama-local.sh_ \
+	@$(do_subst) < $(GAMA_SRC)/octave-gama-local.sh_ \
 	             > octave-gama-local.sh
 	@chmod +x octave-gama-local.sh
 endif
