--- a/tests/extra-tests/Makefile.am
+++ b/tests/extra-tests/Makefile.am
@@ -1,6 +1,6 @@
 TESTS = gama-local-extra-tests.sh
 
-SUBDIRS = scripts input
+SUBDIRS = input
 
 GAMA_SCRIPT  = $(srcdir)/scripts
 GAMA_INPUT   = $(srcdir)/input
@@ -24,9 +24,9 @@ clean-local-check:
 $(GAMA_RESULTS):
 	mkdir -p $(GAMA_RESULTS)
 
-gama-local-extra-tests.sh : $(GAMA_SCRIPT)/gama-local-extra-tests.sh_ \
+gama-local-extra-tests.sh : gama-local-extra-tests.sh_ \
 	      @top_srcdir@/tests/gama-local/gama-local-adjustment.sh
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-extra-tests.sh_ \
+	@$(do_subst) < gama-local-extra-tests.sh_ \
 	             > gama-local-extra-tests.sh
 	@chmod +x gama-local-extra-tests.sh
 
