--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# yaml-cpp copy for optional alternative build
+#
+lib/yaml-cpp
+#
+# --------------------------------------------
 #
 TAGS
 #
@@ -72,6 +77,7 @@ bin/gama-g3
 bin/gama-local
 bin/gama-local-xml2txt
 bin/gama-local-xml2sql
+bin/gama-local-yaml2gkf
 scripts/ellipsoids_xml
 scripts/gnu_gama_dep
 scripts/slovnikar
@@ -96,3 +102,8 @@ results
 *.log
 *.trs
 *.sh
+
+# .............................................................
+#
+Sandbox
+*.tar.gz
