--- a/tests/gama-local/input/Makefile.am
+++ b/tests/gama-local/input/Makefile.am
@@ -1,40 +1,50 @@
-EXTRA_DIST = gama-local.gkf            gama-local.xml \
-             tst-tetrahedron-1.gkf     tst-tetrahedron-1.xml \
-             tst-tetrahedron-2.gkf     tst-tetrahedron-2.xml \
-             tst-tetrahedron-3-deg.gkf tst-tetrahedron-3-deg.xml \
-             tst-tetrahedron-3-gon.gkf tst-tetrahedron-3-gon.xml \
-             zoltan-test_2d_dms.gkf    zoltan-test_2d_dms.xml \
-             zoltan-test_2d_gon.gkf    zoltan-test_2d_gon.xml \
-             zoltan-test_3d_dms.gkf    zoltan-test_3d_dms.xml \
-             zoltan-test_3d_gon.gkf    zoltan-test_3d_gon.xml \
-             scale-cov-gon.gkf \
-             scale-cov-dms.gkf \
-             fixed-constrained.gkf \
-             jezerka-ang.gkf           jezerka-ang.xml \
-             jezerka-dir.gkf           jezerka-dir.xml \
-             krasovsky-1926.gkf        krasovsky-1926.xml \
-             fixed-azimuth.gkf         fixed-azimuth.xml \
-             azimuth-angle.gkf         azimuth-angle.xml \
-             azimuth-azimuth.gkf       azimuth-azimuth.xml \
-             azimuth-distance.gkf      azimuth-distance.xml \
-             triangle-1.gkf            triangle-1.xml \
-             triangle-2.gkf            triangle-2.xml \
-             stroner-levelling-a.gkf   stroner-levelling-a.xml \
-             stroner-levelling-b.gkf   stroner-levelling-b.xml \
-             extern-tst-tetrahedron-3-gon.gkf \
-             extern-tst-tetrahedron-3-gon.xml \
-             extern-azimuth-distance.gkf \
-             extern-azimuth-distance.xml \
-             extern-seq-dsuloha-d.gkf \
-             extern-seq-dsuloha-d.xml \
-             gama-local-nop.gkf \
-             gama-local-par.gkf \
-             gama-local-deprecated.gkf \
-             mikhail-7.4.gkf minimal.gkf local_3d.gkf \
-             seq-dsuloha-d.gkf skorepa-dusek.gkf \
-             bug-2019-08-06-integer-coordinates.gkf \
-             bug-2019-08-06-integer-coordinates.xml \
-             bug-2019-08-13-traverse-knin_male.gkf \
-             bug-2019-08-13-traverse-knin_male.xml \
-             bug-2019-08-20-knin_test.gkf \
-             bug-2019-08-20-knin_test.xml
+EXTRA_DIST = \
+  gama-local.gkf            gama-local.xml \
+  tst-tetrahedron-1.gkf     tst-tetrahedron-1.xml \
+  tst-tetrahedron-2.gkf     tst-tetrahedron-2.xml \
+  tst-tetrahedron-3-deg.gkf tst-tetrahedron-3-deg.xml \
+  tst-tetrahedron-3-gon.gkf tst-tetrahedron-3-gon.xml \
+  zoltan-test_2d_dms.gkf    zoltan-test_2d_dms.xml \
+  zoltan-test_2d_gon.gkf    zoltan-test_2d_gon.xml \
+  zoltan-test_3d_dms.gkf    zoltan-test_3d_dms.xml zoltan-test_3d_dms.yaml \
+  zoltan-test_3d_gon.gkf    zoltan-test_3d_gon.xml \
+  scale-cov-gon.gkf \
+  scale-cov-dms.gkf \
+  fixed-constrained.gkf \
+  jezerka-ang.gkf           jezerka-ang.xml    jezerka-ang.yaml \
+  jezerka-dir.gkf           jezerka-dir.xml    jezerka-dir.yaml \
+  krasovsky-1926.gkf        krasovsky-1926.xml \
+  fixed-azimuth.gkf         fixed-azimuth.xml \
+  azimuth-angle.gkf         azimuth-angle.xml \
+  azimuth-azimuth.gkf       azimuth-azimuth.xml \
+  azimuth-distance.gkf      azimuth-distance.xml \
+  triangle-1.gkf            triangle-1.xml \
+  triangle-2.gkf            triangle-2.xml \
+  stroner-levelling-a.gkf   stroner-levelling-a.xml \
+  stroner-levelling-b.gkf   stroner-levelling-b.xml \
+  extern-tst-tetrahedron-3-gon.gkf \
+  extern-tst-tetrahedron-3-gon.xml \
+  extern-azimuth-distance.gkf \
+  extern-azimuth-distance.xml \
+  extern-seq-dsuloha-d.gkf \
+  extern-seq-dsuloha-d.xml \
+  gama-local-nop.gkf \
+  gama-local-par.gkf \
+  gama-local-deprecated.gkf \
+  local_3d.gkf \
+  skorepa-dusek.gkf \
+  bug-2019-08-06-integer-coordinates.gkf \
+  bug-2019-08-06-integer-coordinates.xml \
+  bug-2019-08-13-traverse-knin_male.gkf \
+  bug-2019-08-13-traverse-knin_male.xml \
+  bug-2019-08-20-knin_test.gkf \
+  bug-2019-08-20-knin_test.xml \
+  seq-dsuloha-d.gkf   seq-dsuloha-d.xml   seq-dsuloha-d.yaml \
+  mikhail-7.4.gkf     mikhail-7.4.xml     mikhail-7.4.yaml \
+  mikhail-7.4-cov.README \
+  mikhail-7.4-cov.gkf mikhail-7.4-cov.xml mikhail-7.4-cov.yaml \
+  geodet-pc-123.gkf   geodet-pc-123.xml   geodet-pc-123.yaml \
+  geodet-pc-218.gkf   geodet-pc-218.xml   geodet-pc-218.yaml \
+  tetrahedron.gkf     tetrahedron.xml     tetrahedron.yaml   tetrahedron.m \
+  cube-1.gkf          cube-1.xml          cube-1.yaml        cube-1.m \
+  minimal.gkf         minimal.xml         minimal.yaml
